--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="left-side">
         <div class="image">
             <div class="logo">
-                <img src="/img/odin-lined.png" alt="logo">
+                <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png" alt="logo">
                 <h1>ODIN</h1>
             </div>
         </div>   
